# postgres_to_redis

./: .gitignore  README.md  backfill_data.py  docker-compose.yml  insert.py  insert_data.py  main.py  pyproject.toml  search.py  search_example.py
src/postgres_replicator/: backfillers.py  consumers.py  data.py  parsers.py  redis_setup.py  replicators.py  search.py
tests/: test_parser.py
